cicd-templates/tekton/triggers/triggers-06-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: el-github-pr
              servicePort: 8080
