cicd-templates/tekton/triggers/triggers-07-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tekton-triggers
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "tekton-triggers.example.com"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tekton-triggers
spec:
  hosts:
  - "tekton-triggers.example.com"
  gateways:
  - tekton-triggers
  http:
  - route:
    - destination:
        host: el-github-pr
        port:
          number: 8080
